--- a/Api/CafeApplication.Api.WebApi/appsettings.json
+++ b/Api/CafeApplication.Api.WebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AppSettings": {
-    "DefaultConnection": "server=localhost; database=CafeApplication; user=root; password=voleybolcu2",
+    "DefaultConnection": "server=localhost; database=CafeApplication; user=root; password=",
     "Secret": "psgRdag1<c)_Ywqlj`E)bivA6Lwh.4vI.v\"'C-CJ+yA\"ALhJ\"Rkq6R:X;/X8T",
     "Sk": "BEBj5ZMRqejsk9CNCm9IprgVe4gUSI0I",
     "Version": "0.1.0"
